--- a/phtc/templates/logic_model/subtemplates/box.html
+++ b/phtc/templates/logic_model/subtemplates/box.html
@@ -1,11 +1,11 @@
 <script type="text/template" id="logic-model-box">
     <div class="cell">
-    	<div class = "box_droppable">
-	    	<div class = "box_draggable">
-	    		<div class = "box_handle">
-	    			<i class="icon-large icon-move"></i>
+    	<div class="box_droppable">
+	    	<div class="box_draggable">
+	    		<div class="box_handle" title="Move this cell">
+	    			<i class="icon-large icon-move" title="Move this cell"></i>
 	    		</div>
-	    		<div class = "switch_color">C</div>
+	    		<div class="switch_color" title="Switch color"><i class="icon-cog" title="Switch color"></i></div>
 		    	<textarea value ="<%=contents%>" class="text_box"></textarea>
 	    	</div>
     	</div>
