--- a/phtc/templates/logic_model/subtemplates/column.html
+++ b/phtc/templates/logic_model/subtemplates/column.html
@@ -1,18 +1,18 @@
 <script type="text/template" id="logic-model-column">
 	<span class ="column_span <%=css_classes %>">
 	    <div class="colhead">
-	    	<div class = "column_name">
+	    	<div class="column_name">
 		    	<%=name %>
 	    	</div>
 	    	<div class="column_help_button_span">
-				<i class="column_help_button icon-large icon-question-sign"></i>
+				<i class="column_help_button icon-question-sign"></i>
 	    	</div>
 	    </div>
-	    <span class ="boxes"></span>
+	    <span class="boxes"></span>
 	    <div class="btn btn-info add_a_row_button">
-	    	+
+	    	<i class="icon-plus icon-white" title="Add a row"></i> 
 	    </div>
-	    <div class="btn btn-primary btn-large btn-success done-button">
+	    <div class="btn btn-primary btn-success done-button">
 	    	I'm Done!
 	    </div>
 	    <div class="divclearfix"></div>
