--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -12,29 +12,26 @@
 
 
 
-
-
-<div class = "wipe-table-div">
-    <div class = "wipe-table-button btn btn-danger">
-        Clear table
+<div class="table-toolbar{% comment %}wipe-table-div{% endcomment %}">
+    <div class="previous_phase btn btn-info"><i class="icon-arrow-left icon-white"></i> Back a step</div>
+    <div class="wipe-table-button btn btn-info"><i class="icon-trash icon-white"></i> Clear table</div>
+    <div class="change_scenario btn btn-info"><i class="icon-refresh icon-white"></i> Switch scenario</div>
+    <div class ="show_expert_logic_model_link_div btn btn-info">
+        <i class="icon-file icon-white"></i> <a target="_blank" href="/_logic_model/media/pdf/expert_logic_model.pdf" class="show_expert_logic_model_link">Show expert logic model</a>
     </div>
-	<div class="btn btn-info change_scenario">Change scenario</div>
-    <div class = "wipe-table-button-div alert">
-        <h3>Are you sure you want to clear the table?</h3> This will permanently erase everything you typed in the boxes.
-        <div class = "wipe-table-confirm-button btn btn-danger">
-            Yes, I'm sure.
-        </div>
-        <div class = "wipe-table-cancel-button btn btn-success">
-            No.
-        </div>
+    <div class="wipe-table-button-div alert">
+    <h3>Are you sure you want to clear the table?</h3> This will permanently erase everything you typed in the boxes.
+    <div class = "wipe-table-confirm-button btn btn-danger">
+    Yes, I'm sure.
+    </div>
+    <div class = "wipe-table-cancel-button btn btn-success">
+    No.
+    </div>
     </div>
 </div>
 
 
 
-<div class = "show_expert_logic_model_link_div">
-    <a target="_blank" href="/_logic_model/media/pdf/expert_logic_model.pdf" class=" show_expert_logic_model_link btn btn-info" >Show expert logic model</a>
-</div>
 
 
 <!-- the whole table goes here: -->
