--- a/phtc/templates/logic_model/block_js.html
+++ b/phtc/templates/logic_model/block_js.html
@@ -1,12 +1,12 @@
-<script src="/site_media/js/underscore-min.js"                     type="text/javascript" ></script>
-<script src="/site_media/js/backbone-min.js"                       type="text/javascript" ></script>
-<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"        type="text/javascript" ></script>
-<script src="/_logic_model/media/js/logicmodel.js"                 type="text/javascript" ></script>
-<script src="/_logic_model/media/js/view.js"                       type="text/javascript" ></script>
-<script src="/_logic_model/media/js/scenario.js"                   type="text/javascript" ></script>
-<script src="/_logic_model/media/js/box.js"                        type="text/javascript" ></script>
-<script src="/_logic_model/media/js/column.js"                     type="text/javascript" ></script>
-<script src="/_logic_model/media/js/setup.js"                      type="text/javascript" ></script>
+<script src="/site_media/js/underscore-min.js" type="text/javascript" ></script>
+<script src="/site_media/js/backbone-min.js" type="text/javascript" ></script>
+<script src="/site_media/js/jquery-ui-1.10.3.min.js" type="text/javascript" ></script>
+<script src="/_logic_model/media/js/logicmodel.js" type="text/javascript" ></script>
+<script src="/_logic_model/media/js/view.js" type="text/javascript" ></script>
+<script src="/_logic_model/media/js/scenario.js" type="text/javascript" ></script>
+<script src="/_logic_model/media/js/box.js" type="text/javascript" ></script>
+<script src="/_logic_model/media/js/column.js" type="text/javascript" ></script>
+<script src="/_logic_model/media/js/setup.js" type="text/javascript" ></script>
 {%include "logic_model/subtemplates/column.html"   %}
 {%include "logic_model/subtemplates/box.html"      %}
 {%include "logic_model/subtemplates/scenario.html" %}
