--- a/phtc/templates/main/edit_page.html
+++ b/phtc/templates/main/edit_page.html
@@ -351,6 +351,8 @@ method="post">
 </div>
 
 </div>
+<script>window.phtcInputFormCheck = 1;</script>
+
 {% endblock %}
 
 {% block content-nav %}
@@ -373,3 +375,4 @@ method="post">
 {% block primarynavrightextra %}
             <li><a href="{{section.get_absolute_url}}">View</a></li>
 {% endblock %}
+
