--- a/phtc/templates/main/reports.html
+++ b/phtc/templates/main/reports.html
@@ -13,8 +13,13 @@
 </form>
 
 <form method="post" action="/reports/" class="w">
-    <input type="submit" value="User Report" class="btn btn-primary">
-    <input type="hidden" name="report" value="user_report">
+    <input type="submit" value="User Report - completed modules" class="btn btn-primary">
+    <input type="hidden" name="report" value="user_report_completed">
+</form>
+
+<form method="post" action="/reports/" class="w">
+    <input type="submit" value="User Report - attempted modules" class="btn btn-primary">
+    <input type="hidden" name="report" value="user_report_attempted">
 </form>
 
 <form method="post" action="/reports/" class="w">
