cas logout fix, admin tmplate change

--- a/phtc/templates/admin/login.html
+++ b/phtc/templates/admin/login.html
@@ -25,7 +25,7 @@
 </form>
 
 <p class="smalltxt"><a href="/registration/register/" title="Create your new project account">Need a new account?</a></p>
-<p class="smalltxt"><a href="/registration/password/reset/{% url uidb64=uid token=token %}" title="Reset Password">Forgot Password?</a></p>
+<p class="smalltxt"><a href="/registration/password/reset/" title="Reset Password">Forgot Password?</a></p>
 
 {% endblock %}
 
