fix the activate url

--- a/phtc/templates/registration/activation_complete.html
+++ b/phtc/templates/registration/activation_complete.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h3>Your account is created!</h3>
 
-<p>Thank you. Your PHTC account activation is completed!  You may now <a href='{% url 'auth_login' %}'>login</a> using the username and password you set at registration to access PHTC modules.</p>
+<p>Thank you. Your PHTC account activation is completed!  You may now <a href='/accounts{% url 'auth_login' %}'>login</a> using the username and password you set at registration to access PHTC modules.</p>
 {% endblock %}
 
 
