--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -1,3 +1,4 @@
+{% load bootstrap3 %}
 {% load compress %}
 <!DOCTYPE html>
 <html lang="en">
@@ -9,13 +10,13 @@
   <meta name="author" content="CCNMTL">
 
   {% compress css %}
-  <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="{% bootstrap_css_url %}" rel="stylesheet">
   {% comment %} <link href="{{STATIC_URL}}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">{% endcomment %}
   <link href="{{STATIC_URL}}css/main.css?site=phtc" rel="stylesheet">
   {% endcompress %}
 	<link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" type="image/x-icon" />
 	{% block css %}{% endblock %}
-  <script src="{{STATIC_URL}}js/jquery-1.7.2.min.js"></script>
+  <script src="{{STATIC_URL}}js/jquery-1.11.1.min.js"></script>
 
 <!-- shield -->
 <link rel="stylesheet" href="{{STATIC_URL}}js/shield-1.0/shield.css" type="text/css" media="all" />
@@ -153,7 +154,7 @@ the Health Resources and Services Administration, U.S. Department of Health and 
 
 {% block js %}{% endblock %}
 {% compress js %}
-<script src="{{STATIC_URL}}bootstrap/js/bootstrap.js"></script>
+<script src="{% bootstrap_javascript_url %}"></script>
 {% endcompress %}
 
 <script>
