--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -35,7 +35,8 @@
 		  {% endfor %}
 		  <a class="show-module" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
 		  <div class="divclearfix"></div>
-		  <ul>
+		  <div class="show-descendants" style="display:none">
+		    <ul>
             {% for s in module.get_descendants %}
               {% ifequal s.id module.id %}
               {% else %}
@@ -56,7 +57,8 @@
                 </li>
                {% endifequal %}
             {% endfor %}
-          </ul>
+            </ul>
+          </div><!--end .show-descendants-->
       </div><!--end .module-->
     {% endfor %}
   </div>
