anonymous users can view quizzes

--- a/phtc/templates/main/page.html
+++ b/phtc/templates/main/page.html
@@ -27,12 +27,13 @@
 {% endblock %}
 
 {% block content %}
-<div id="content">
-  {% if is_mod_one %}
+  <div id="content">
+    {% if is_mod_one %}
       <style>
         #sidebarleft ul ul{margin: 0 !important;}
       </style>
     {% endif %}
+    <!-- Not sure whether to take this out or not - may affect rhetorical quizzes? -->
 {% if needs_submit %}
 {% if is_submitted %}
 {% else %}
@@ -42,34 +43,34 @@
 
 
 {% for block in section.pageblock_set.all %}
-<div class="pageblock{% if block.css_extra %} {{block.css_extra}}{% endif %}">
-{% if block.label %}<h3>{{block.label}}</h3>{% endif %}
-{% render block %}
+  <div class="pageblock{% if block.css_extra %} {{block.css_extra}}{% endif %}">
+    {% if block.label %}<h3>{{block.label}}</h3>{% endif %}
+    {% render block %}
 
-{{block.description}}
+    {{block.description}}
 
-</div>
+  </div>
 {% endfor %}
+
 {% if needs_submit %}
 {% if request.user.is_anonymous %}
 {% else %}
 
-{% if is_submitted %}
-{% if request.user.is_staff %}
-<form action="." method="post">
-<input type="hidden" name="action" value="reset" />
-<input type="submit" value="clear your answers and try again" class="btn" />
-</form>
-{% endif %}
-<script>
-  jQuery(document).ready(function(){
-    jQuery('.pager').css({ display: 'block'})
-  })
-  </script>
-{% else %}
-<input type="submit" value="Submit" class="btn btn-primary" />
-
-</form>
+  {% if is_submitted %}
+    {% if request.user.is_staff %}
+    <form action="." method="post">
+    <input type="hidden" name="action" value="reset" />
+    <input type="submit" value="clear your answers and try again" class="btn" />
+    </form>
+  {% endif %}
+    <script>
+      jQuery(document).ready(function(){
+    	  jQuery('.pager').css({ display: 'block'})
+      })
+    </script>
+  {% else %}
+    <input type="submit" value="Submit" class="btn btn-primary" />
+  </form>
 {% endif %}
 {% endif %}
 {% endif %}
@@ -83,7 +84,7 @@
     <li class="previous">
       <a href="{{section.get_previous.get_absolute_url}}">&larr; {{section.get_previous.label}}</a>
     </li>
-{% endif %}
+  {% endif %}
 {% endifnotequal %}
 
 {% if section.get_next %}
