--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -20,6 +20,7 @@
 		<p>
 		New trainings are always being developed and will be added regularly to the training catalog. Be sure to log-in regularly to check for updates!
 		</p>
+		<p><a class="btn btn-success" href="/dashboard/" role="button">Start Modules</a></p>
         </div><!--end #welcome-->
         <div id="user_log_in">            
             <h3 class="log_in">Please log in</h3>
