add style to answers

--- a/phtc/templates/quizblock/long_answer_show_answer.html
+++ b/phtc/templates/quizblock/long_answer_show_answer.html
@@ -1,7 +1,7 @@
 {% load markup %}
   {% comment %} short/long text questions {% endcomment %}
   {% if block.reading_exercise %}
-  	  <div class="casesanswerdisplay">
+  	  <div class="casesanswerdisplay question_response">
   	  	  <p class="your-answer-feedback">Feedback:</p>
           <p>{{question.explanation|markdown}}</p>
       </div>
