--- a/phtc/templates/quizblock/multiple_choice_show_answer.html
+++ b/phtc/templates/quizblock/multiple_choice_show_answer.html
@@ -1,6 +1,6 @@
 {% load markup %}
 {% if block.rhetorical %}
-      <div class="casesanswerdisplay">
+      <div class="casesanswerdisplay question_response">
         <a href="#q{{question.id}}" class="moretoggles">Show answer(s) &gt;&gt;</a>
         <div id="q{{question.id}}" class="toggleable">
           <p><i>The correct answer(s):</i></p>
