--- a/phtc/templates/quizblock/single_choice_feedback_show_answer.html
+++ b/phtc/templates/quizblock/single_choice_feedback_show_answer.html
@@ -1,6 +1,6 @@
 {% load markup %}
 {% if block.feedback  %}
-      <div class="casesanswerdisplay">
+      <div class="casesanswerdisplay question_response">
         <div id="q{{question.id}}" class="toggleable">
           <p>
           {{answer.feedback}}
