--- a/phtc/templates/quizblock/question.html
+++ b/phtc/templates/quizblock/question.html
@@ -13,8 +13,17 @@
       {{question.text|markdown}}
       
       {% if question.answerable %}
-        {% if block.rhetorical %}<form id="form-{{question.id}}" method="post">{% endif %}
-        {% if block.matching %}<form id="matching-form-{{question.id}}">{% endif %}
+      
+        {% if block.rhetorical %}
+          <form id="form-{{question.id}}" method="post">
+        {% endif %}
+        
+        {% if block.matching %}
+          <form id="matching-form-{{question.id}}">
+        {% endif %}
+        
+        <!-- go through each question type, note that only the
+        rhetorical and matching blocks have form tags -->
 
 	    {% if question.is_single_choice %}
           {% include 'quizblock/single_choice.html' %}
@@ -55,17 +64,10 @@
       {% endif %}
     </div>
     <!-- we want to show the anser no matter what -->
+    <!-- might be easier to edit question types
+    directly since we show answer no matter what -->
     {% include 'quizblock/show_answer.html' %}
     
-      {% comment %}
-        {% if block.rhetorical %}
-          {% include 'quizblock/show_answer.html' %}
-        {% else %}
-          {% if response %}
-            {% include 'quizblock/show_answer.html' %}
-          {% endif %}
-        {% endif %}
-      {% endcomment %}
   </div>
 </div>
 
